# aws-mfa

./: README.md  pyproject.toml  ruff.toml
src/aws_mfa/: __init__.py
