[project]
name = "aws-mfa"
version = "0.1.0"
description = "AWS MFA session token setup helper."
readme = "README.md"
authors = [
    { name = "Godai Takashina", email = "godai.takashina@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "keyrings-cryptfile>=1.3.9",
]

[project.scripts]
aws-mfa = "aws_mfa:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
